# CoastMotionPlanning

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
apps/: CMakeLists.txt  generate_nh_lut.cpp  planner_visualizer.cpp
apps/planner_visualizer/: app.js  index.html  styles.css
configs/: master_params.yaml  planner_behaviors.yaml  robots.yaml
configs/behavior_trees/: planner_behavior_tree.xml
configs/maps/: largo_map.yaml  old_selkirk_map.yaml  selkirk_map.yaml
docs/: grid_map_reference.md  library_api_reference.md  planner_behavior_tree.md
include/coastmotionplanning/collision_checking/: collision_checker.hpp
include/coastmotionplanning/common/: math_constants.hpp  profiling.hpp  types.hpp
include/coastmotionplanning/config/: planner_behavior_parser.hpp  robots_parser.hpp
include/coastmotionplanning/costs/: costmap_builder.hpp  costmap_types.hpp  dual_model_non_holonomic_heuristic.hpp  dynamic_obstacle_layer.hpp  holonomic_obstacles_heuristic.hpp  inflation_layer.hpp  lane_centerline_layer.hpp  map_layer_cache.hpp  non_holonomic_heuristic.hpp  static_obstacle_layer.hpp  zone_constraints_layer.hpp  zone_selector.hpp
include/coastmotionplanning/geometry/: shape_types.hpp
include/coastmotionplanning/map/: coordinate_transform.hpp  map_parser.hpp
include/coastmotionplanning/math/: angle.hpp  pose2d.hpp
include/coastmotionplanning/motion_primitives/: car_motion_table.hpp  motion_primitive_types.hpp  truck_trailer_motion_table.hpp
include/coastmotionplanning/planning/: behavior_tree_planner_orchestrator.hpp  hybrid_a_star_planner.hpp  planner_behavior_profile.hpp  planner_behavior_resolver.hpp  planner_behavior_set.hpp
include/coastmotionplanning/robot/: car.hpp  robot_base.hpp  truck_trailer.hpp
include/coastmotionplanning/visualizer/: planner_visualizer_server.hpp  planner_visualizer_service.hpp
include/coastmotionplanning/zones/: maneuvering_zone.hpp  track_main_road.hpp  zone.hpp  zone_type_utils.hpp
rtmaps/: CMakeLists.txt
scripts/: build.ps1
src/collision_checking/: collision_checker.cpp
src/config/: planner_behavior_parser.cpp  robots_parser.cpp
src/costs/: costmap_builder.cpp  dual_model_non_holonomic_heuristic.cpp  dynamic_obstacle_layer.cpp  holonomic_obstacles_heuristic.cpp  inflation_layer.cpp  lane_centerline_layer.cpp  map_layer_cache.cpp  non_holonomic_heuristic.cpp  static_obstacle_layer.cpp  zone_constraints_layer.cpp  zone_selector.cpp
src/map/: coordinate_transform.cpp  map_parser.cpp
src/math/: pose2d.cpp
src/motion_primitives/: car_motion_table.cpp  truck_trailer_motion_table.cpp
src/planning/: behavior_tree_planner_orchestrator.cpp  hybrid_a_star_planner.cpp  planner_behavior_profile.cpp  planner_behavior_resolver.cpp  planner_behavior_set.cpp
src/robot/: car.cpp  truck_trailer.cpp
src/visualizer/: planner_visualizer_server.cpp  planner_visualizer_service.cpp
src/zones/: maneuvering_zone.cpp  track_main_road.cpp  zone.cpp
tests/: CMakeLists.txt
tests/collision_checking/: CollisionCheckerTest.cpp
tests/config/: PlannerBehaviorParserTest.cpp  RobotsParserTest.cpp
tests/costs/: CostmapBuilderTest.cpp  DualModelNonHolonomicHeuristicTest.cpp  HolonomicHeuristicTest.cpp  InflationLayerTest.cpp  NonHolonomicHeuristicTest.cpp  ZoneSelectorTest.cpp
tests/geometry/: ShapeTypesTest.cpp
tests/map/: MapParserTest.cpp
tests/math/: Pose2dTest.cpp
tests/motion/: MotionPrimitivesTest.cpp
tests/planning/: BehaviorTreePlannerTest.cpp  GridMapTest.cpp  HybridAStarPlannerTest.cpp  PlannerBehaviorResolverTest.cpp
tests/visualizer/: PlannerVisualizerServerTest.cpp  PlannerVisualizerServiceTest.cpp
